-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.3, 6.8.0
-
None
-
-
dd8591500 (dev), a9dcb618f (6.8), 505726451 (tqtc/lts-6.5)
-
Multimedia wk 43-44, Multimedia wk 47-48, Multimedia wk 49-50
I have only seen this problem on Android emulator. Physical device seems to work well regardless. That if I specify a landscape size, e.g. Qt.size(1920, 1080), for MediaRecorder videoResolution and deploy the app to a device that is in portrait mode, then app is going to crash upon record() being called. Crash is due to
F libc : Fatal signal 11 (SIGSEGV), code 2 (SEGV_ACCERR), fault addr 0x78c1e8b54000 in tid 28191 (VideoEncoder), pid 28109 (project.example)
Changing resolution to, e.g. Qt.size(1080, 1920), solves the problem. Leaving resolution unspecified and letting Qt decide also works. The reproducer I am testing is our QML Video Recorder Example, with
videoResolution: Qt.size(......)
set to MediaRecorder.
For Gerrit Dashboard: QTBUG-130898 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
609493,4 | Select conversion type based on scale direction | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
609609,2 | Select conversion type based on scale direction | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
609725,4 | Select conversion type based on scale direction | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | -1 |