src/plugins/multimedia/ffmpeg/recordingengine/qffmpegvideoframeencoder.cpp
@@ -640,8 +640,10 @@ void VideoFrameEncoder::updateConversions()
                 << "video source and encoder use different formats:" << m_sourceSWFormat
                 << m_targetSWFormat << "or sizes:" << m_sourceSize << m_targetSize;
 
+        const int conversionType = getScaleConversionType(m_sourceSize, m_targetSize);
+
         m_scaleContext = createSwsContext(m_sourceSize, m_sourceSWFormat, m_targetSize,
-                                          m_targetSWFormat, SWS_FAST_BILINEAR);
+                                          m_targetSWFormat, conversionType);
     }
 
     qCDebug(qLcVideoFrameEncoder) << "VideoFrameEncoder conversions initialized:"
